@@ -1,1 +1,14 @@
 # MyTg
+
+Portable Desktop Telegram Client
+
++ TDLib 
++ JavaFX (Gluon)
++ Slf4j + Logback
+
+## dev
+
+VM options:
+
+--module-path "C:\dev\javafx-sdk-17.0.14/lib" --add-modules javafx.controls,javafx.fxml 
+
